--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-font": "~12.0.9",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
+    "react-hook-form": "^7.52.2",
     "react-native": "0.74.5",
     "styled-components": "5.3.9"
   },
