--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "axios": "^1.7.4",
+    "date-fns": "^3.6.0",
     "expo": "~51.0.26",
     "expo-font": "~12.0.9",
     "expo-status-bar": "~1.12.1",
@@ -21,7 +22,8 @@
     "react-native": "0.74.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "styled-components": "5.3.9"
+    "styled-components": "5.3.9",
+    "victory-native": "^41.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
