--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "react-native": "0.74.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.5.0",
     "styled-components": "5.3.9",
-    "victory-native": "^41.1.0"
+    "victory-native": "^37.0.3-next.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
